--- a/COHttpClient/Podfile
+++ b/COHttpClient/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-#platform :ios, ‘7.0’
+platform :ios, ‘7.0’
 
 # ignore all warnings from all pods
 inhibit_all_warnings!
@@ -7,7 +7,7 @@ inhibit_all_warnings!
 xcodeproj 'COHttpClient.xcodeproj'
 
 def all_pods
-pod 'AFNetworking', '3.0.4'
+pod 'AFNetworking', '~> 3.0.4'
 end
 
 target 'COHttpClient' do
