- Add some status type to match with API convention - Add requestSerialize and responseSerialize - Add unittest

--- a/COHttpClient/Podfile
+++ b/COHttpClient/Podfile
@@ -12,5 +12,12 @@ end
 
 target 'COHttpClient' do
 all_pods
+
+end
+target 'COHttpClientTests' do
+all_pods
+pod 'Nocilla'
+pod 'JSONKit-NoWarning', '~> 1.2'
+
 end
 
