--- a/COHttpClient/Podfile
+++ b/COHttpClient/Podfile
@@ -7,7 +7,7 @@ inhibit_all_warnings!
 xcodeproj 'COHttpClient.xcodeproj'
 
 def all_pods
-pod 'AFNetworking', '~> 3.0.4'
+pod 'AFNetworking', '~> 3.0.4', :subspecs => ['Reachability','NSURLSession']
 end
 
 target 'COHttpClient' do
