--- a/COHttpClient/Podfile
+++ b/COHttpClient/Podfile
@@ -1,13 +1,15 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, ‘7.0’
+platform :ios, ‘9.0’
 
 # ignore all warnings from all pods
 inhibit_all_warnings!
+use_frameworks!
 
-xcodeproj 'COHttpClient.xcodeproj'
+project 'COHttpClient.xcodeproj'
 
 def all_pods
-pod 'AFNetworking', '~> 3.0.4', :subspecs => ['Reachability','NSURLSession']
+#pod 'AFNetworking', '3.0.4', :subspecs => ['Reachability','NSURLSession']
+pod 'AFNetworking', '~> 3.0', :source => 'https://github.com/ElfSundae/CocoaPods-Specs.git'
 end
 
 target 'COHttpClient' do
