--- a/COHttpClient/Podfile
+++ b/COHttpClient/Podfile
@@ -9,7 +9,8 @@ project 'COHttpClient.xcodeproj'
 
 def all_pods
 #pod 'AFNetworking', '3.0.4', :subspecs => ['Reachability','NSURLSession']
-pod 'AFNetworking', '~> 3.0', :source => 'https://github.com/ElfSundae/CocoaPods-Specs.git'
+#pod 'AFNetworking', '~> 3.0', :source => 'https://github.com/ElfSundae/CocoaPods-Specs.git'
+pod 'AFNetworking', '3.0.4', :subspecs => ['Reachability','Serialization','Security','NSURLSession']
 end
 
 target 'COHttpClient' do
