--- a/COHttpClient/Podfile
+++ b/COHttpClient/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, ‘9.0’
+platform :ios, ‘12.0’
 
 # ignore all warnings from all pods
 inhibit_all_warnings!
@@ -10,12 +10,23 @@ project 'COHttpClient.xcodeproj'
 def all_pods
 #pod 'AFNetworking', '3.0.4', :subspecs => ['Reachability','NSURLSession']
 #pod 'AFNetworking', '~> 3.0', :source => 'https://github.com/ElfSundae/CocoaPods-Specs.git'
-pod 'AFNetworking', '3.0.4', :subspecs => ['Reachability','Serialization','Security','NSURLSession']
+#pod 'AFNetworking', '3.0.4', :subspecs => ['Reachability','Serialization','Security','NSURLSession']
+pod 'AFNetworking', '4.0.1'
+
 end
 
 target 'COHttpClient' do
 all_pods
+end
 
+post_install do |installer|
+    installer.generated_projects.each do |project|
+        project.targets.each do |target|
+            target.build_configurations.each do |config|
+                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+            end
+        end
+    end
 end
 
 
